# ska-sdp-dataproduct-metadata

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .release  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  CONTRIBUTORS  LICENSE  Makefile  README.md  README.rst  pyproject.toml  skart.toml
data/: GLEAM_filtered.txt  run_sims_decimated.ini
docs/: requirements.txt
docs/src/: api.rst  conf.py  contents-of-metadata.rst  index.rst  introduction.rst
resources/: metadata_defaults.yaml  sdp-data-out.yaml
src/ska_sdp_dataproduct_metadata/: __init__.py  config.py  metadata.py  ms_metadata.py  obscore.py  sim_interferometer_and_metadata_command_line.py  sim_interferometer_command_line.py
src/ska_sdp_dataproduct_metadata/schema/: metadata.json
src/ska_sdp_dataproduct_metadata/template/: metadata_defaults.yaml
tests/: conftest.py  test_metadata.py  test_ms_metadata.py
tests/resources/: configuration_string.json  expected_metadata.yaml  expected_metadata_obscore_without_files.yaml  expected_metadata_with_files.yaml  expected_metadata_without_files.yaml  expected_updated_metadata.yaml  test_metadata_default.yaml
tests/resources/product/eb-test-20200325-00001/ska-sdp/pb-test-20200425-00000/: ska-data-product.yaml
tests/resources/product/test/ska-sdp/test/: ska-data-product.yaml
