[tool.poetry]
name = "ska-sdp-dataproduct-metadata"
version = "0.6.0"
description = "SKA SDP Data Product Metadata"
authors = ["SKA SDP Developers"]
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-dataproduct-metadata"
documentation = "https://developer.skao.int/projects/ska-sdp-dataproduct-metadata/en/latest/"
license = "BSD-3-Clause"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"


[tool.poetry.dependencies]
python = "^3.10"
ska-ser-logging = "^0.4.3"
ska-sdp-config = "^0.10.0"
python-benedict = "^0.33.2"
jsonschema = "^4.22"

[tool.poetry.dev-dependencies]
isort = "^5.13"
black = "^24.4"
flake8 = "^7.0"
pylint = "^3.1"
pylint-junit = "^0.3"
pytest = "^8.2"
pytest-cov = "^5.0"
build = "^1.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"
semantic-version = "^2.10"
m2r2 = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
