[tool.poetry]
name = "ska-sdp-dataproduct-metadata"
version = "0.7.0"
description = "SKA SDP Data Product Metadata"
authors = ["SKA SDP Developers"]
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-dataproduct-metadata"
documentation = "https://developer.skao.int/projects/ska-sdp-dataproduct-metadata/en/latest/"
license = "BSD-3-Clause"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"


[tool.poetry.dependencies]
python = "^3.10"
ska-ser-logging = "^0.4.3"
ska-sdp-config = "^0.10.3"
python-benedict = "^0.34"
jsonschema = "^4.23"

[tool.poetry.dev-dependencies]
black = "^24.10"
build = "^1.2"
flake8 = "^7.1"
isort = "^5.13"
pylint = "^3.3"
pylint-junit = "^0.3"
pytest = "^8.3"
pytest-cov = "^6.0"

[tool.poetry.group.docs.dependencies]
ska-ser-sphinx-theme = "^0.2.1"
sphinx = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
